--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,9 @@ android {
         debug {
             applicationIdSuffix = ".dev"
 
-            buildConfigField("String", "server_url", "\"dev\"")
+            buildConfigField("String", "server_url", "\"https://127.0.0.1\"")
+            buildConfigField("String", "mock_phone", "\"375000000000\"")
+            buildConfigField("String", "mock_code", "\"0000\"")
 
             minifyEnabled false
         }
@@ -40,10 +42,6 @@ android {
     flavorDimensions("region")
 
     productFlavors {
-        create("belarus") {
-            applicationIdSuffix = ".belarus"
-            dimension = "region"
-        }
     }
 
     compileOptions {
@@ -52,6 +50,9 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        freeCompilerArgs += [
+                "-Xjvm-default=all",
+        ]
     }
 
     buildFeatures {
@@ -66,7 +67,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
-    def viewModelVersion = "2.5.0-beta01"
+    def viewModelVersion = "2.5.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewModelVersion"
 
     def lifeDataVersion = "2.5.0-beta01"
@@ -98,4 +99,22 @@ dependencies {
 
     def fragNavVersion = "3.2.0"
     implementation "com.ncapdevi:frag-nav:$fragNavVersion"
+
+    def daggerVersion = "2.42"
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+
+    def daggerSupportVersion = "2.27"
+    implementation "com.google.dagger:dagger-android-support:$daggerSupportVersion"
+    kapt "com.google.dagger:dagger-android-processor:$daggerSupportVersion"
+
+    def coroutinesVersion = "1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
+
+    def loggingInterceptorVersion = "4.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:$loggingInterceptorVersion"
+
+    def flexLayoutVersion = "3.0.0"
+    implementation "com.google.android.flexbox:flexbox:$flexLayoutVersion"
 }
