--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,9 @@ android {
                 "-Xjvm-default=all",
         ]
     }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.3.2"
+    }
 
     buildFeatures {
         viewBinding true
@@ -89,7 +92,8 @@ dependencies {
     implementation Libs.AndroidX.Compose.iconsExtended
     implementation Libs.AndroidX.Compose.tooling
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation Libs.Coil.coilCompose
+
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
